trash/k8s/pod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-test-uat
  labels:
    app: backend-test-uat
  namespace: youyuan
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: backend-test-uat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-test-uat
  labels:
    app: backend-test-uat
  namespace: youyuan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-test-uat
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend-test-uat
    spec:
      restartPolicy: Always
      containers:
        - name: backend-test-uat
          image: registry.cn-beijing.aliyuncs.com/36node/backend-test:pr-3
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: "1000m"
              memory: "1Gi"
            requests:
              cpu: "10m"
              memory: "32Mi"
